--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,11 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-  <!-- Simulate someone embedding your widget -->
-  <script type="module" src="http://localhost:5173/src/main.js"></script>
+    <!-- Simulate someone embedding your widget -->
+    <script
+      type="module"
+      src="http://localhost:5173/src/main.js"
+      data-site-id="your-site-id"
+    ></script>
   </body>
 </html>
