--- a/apps/widget/index.html
+++ b/apps/widget/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Widget Preview</title>
-</head>
-<body>
-  <h1>This is a test page</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Widget Preview</title>
+  </head>
+  <body>
+    <h1>This is a test page</h1>
 
-  <!-- Simulate someone embedding your widget -->
-  <script type="module" src="http://localhost:5173/src/main.js"></script>
-</body>
+    <!-- Simulate someone embedding your widget -->
+    <script
+      type="module"
+      src="http://localhost:5173/src/main.js"
+      data-site-id="your-site-id"
+    ></script>
+  </body>
 </html>
