--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FeedBAck Admin Dashboard</title>
+    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-
-    <!-- Simulate someone embedding your widget -->
-    <script
-      type="module"
-      src="http://localhost:5173/src/main.js"
-      data-site-id="your-site-id"
-    ></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
